# fontmaster

./: CMakeLists.txt  all.sh  allfiles.txt
cmake/: fontmaster-config.cmake.in
include/fontmaster/: #FontMaster.h#  CBDT_CBLC_Font.h  CBDT_CBLC_Handler.h  CBDT_CBLC_Parser.h  CBDT_CBLC_Rebiulder.h  CBDT_CBLC_Rebuilder.h  CBDT_CBLC_Types.h  CFFParser.h  CMAPParser.h  FontMaster.h  MAXPParser.h  NAMEParser.h  POSTParser.h  TTFRebuilder.h  TTFUtils.h
src/cli/: CommandProcessor.cpp  main.cpp
src/core/: Exceptions.h  FontMaster.cpp  FontRegistry.cpp
src/formats/: CBDT_CBLC_Font.cpp  CBDT_CBLC_Handler.cpp  CBDT_CBLC_Parser.cpp  CBDT_CBLC_Rebuilder.cpp  CBDT_CBLC_Registration.cpp  COLR_CPAL_Handler.cpp  ColorFontHandler.cpp  SBIX_Handler.cpp  SVG_Handler.cpp
src/qt/: MainWindow.cpp  MainWindow.h  main.cpp
src/utils/: CFFParser.cpp  CMAPParser.cpp  MAXPParser.cpp  NAMEParser.cpp  POSTParser.cpp  TTFRebuilder.cpp  TTFUtils.cpp
tests/: test_cbdt_cblc.cpp
